tests/rust_port_async_scope/rust_port_async_scope.exp
Error ---------------------------------------------------------------------------------------------------- test.js:10:10

Cannot return `input + 1` because `Promise` [1] is incompatible with number [2]. [incompatible-type]

   test.js:10:10
     10|   return input + 1;
                  ^^^^^^^^^

References:
   <BUILTINS>/core.js:2285:15
   2285| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]
   test.js:9:41
      9| async hook useAsyncData(input: number): number {
                                                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:14:10

Cannot return `"hello"` because `Promise` [1] is incompatible with string [2]. [incompatible-type]

   test.js:14:10
     14|   return "hello";
                  ^^^^^^^

References:
   <BUILTINS>/core.js:2285:15
   2285| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]
   test.js:13:26
     13| async hook useChained(): string {
                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:19:10

Cannot return `42` because `Promise` [1] is incompatible with string [2]. [incompatible-type]

   test.js:19:10
     19|   return 42; // ERROR: number incompatible with string
                  ^^

References:
   <BUILTINS>/core.js:2285:15
   2285| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]
   test.js:18:28
     18| async hook useBadReturn(): string {
                                    ^^^^^^ [2]



Found 3 errors
